# mpilab2

./: CMakeLists.txt  main.cpp  parallel.cpp
